fixed overflow for twitter bar

--- a/source/stylesheets/layout/_default.sass
+++ b/source/stylesheets/layout/_default.sass
@@ -8,3 +8,4 @@ html
 
 .layout--content
   max-width: 100%
+  overflow: hidden
