--- a/source/stylesheets/views/_home.sass
+++ b/source/stylesheets/views/_home.sass
@@ -122,7 +122,6 @@ $blog--p-height: 72px
 
 #twitter
   clear: both
-  overflow: hidden
   padding: 20px 0
   width: 100%
   a
